# neural-rs

./: .gitignore  Cargo.toml  README.md  README.nl-NL.md  index.html
neural/: Cargo.toml
neural-bench/: Cargo.toml
neural-bench/src/: main.rs
neural-cli/: Cargo.toml
neural-cli/src/: idx.rs  io.rs  main.rs
neural-emnist/: Cargo.toml  index.html
neural-emnist/assets/: default-letters.7a24035c.nnet  default.0e7958bf.nn64  default.7829eb6a.nnet  index.2408d1c5.css  index.46b0bbc8.js  index.5cdd1258.css  index.a7ce26eb.css  index.c782b84f.js  index.ceafff9e.js  index.f33c87fd.js  index.f4a4a0e0.js  neural_web_bg.2921f5c9.wasm  neural_web_bg.669b708d.wasm
neural-emnist/src/: lib.rs
neural-emnist/www/: package-lock.json  package.json  tsconfig.json  vite.config.ts
neural-emnist/www/assets/: default.nn64
neural-emnist/www/src/: App.svelte  DrawCanvas.svelte  assets.d.ts
neural-utils/: Cargo.toml
neural-utils/src/: io.rs  lib.rs
neural-web/: Cargo.toml
neural-web/src/: lib.rs
neural-web/www/: index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
neural-web/www/assets/: default.nnet
neural-web/www/src/: App.svelte  DrawCanvas.svelte  main.css  main.ts
neural/src/: activation_function.rs  back_propagation.rs  cost_function.rs  functions.rs  lib.rs  math.rs  network.rs  util.rs
neural/src/layer/: conv2d.rs  fully_connected.rs  input.rs  mod.rs  pool2d.rs
