[package]
name = "neural-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neural = { path = "../neural" }
bincode = { version = "2.0.0-rc.1", features = [ "derive" ] }
byteorder = "1.4.3"
clap = { version = "3.2.6", features = [ "derive" ] }
rand = "0.8.5"