[package]
name = "neural-cli"
description = "A CLI tool for the neural library that handles IDX file formats"
version = "0.1.0"
edition = "2021"
authors = [ "Stefan Nienhuis <stefan@nienhuisdevelopment.com>" ]
license = "MIT"
repository = "https://github.com/StefanNienhuis/neural-rs.git"

[dependencies]
neural = { path = "../neural" }
neural-utils = { path = "../neural-utils" }
bincode = { version = "2.0.0-rc.1", features = [ "derive" ] }
byteorder = "1.4.3"
clap = { version = "3.2.6", features = [ "derive" ] }
rand = "0.8.5"
ctrlc = "3.2.2"

[features]
default = ["high-precision", "threads"]
threads = ["neural/threads"]
high-precision = ["neural/high-precision"]