[package]
name = "neural-web"
version = "0.1.0"
edition = "2021"
authors = ["Stefan Nienhuis <stefan@nienhuisdevelopment.com>"]
description = "Web interface for the neural network"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

neural = { path = "../neural" }

getrandom = { version = "0.2.7", features = ["js"] }