[package]
name = "neural"
version = "0.1.0"
edition = "2021"


[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
bincode = { version = "2.0.0-rc.1", features = ["serde"] }
nalgebra = { version = "0.31.0", features = ["serde-serialize"] }
crossbeam-utils = { version = "0.8.10", optional = true }

[features]
default = ["threads"]
threads = ["crossbeam-utils"]